--- a/styles.css
+++ b/styles.css
@@ -13,12 +13,15 @@ html {
   
   #piano {
     background: linear-gradient(45deg, red, orange, yellow, green, blue, indigo, violet, red);
+    box-shadow: 2px 3px black;
     width: 992px;
     height: 290px;
     margin: 80px auto;
     padding: 90px 20px 0 20px;
     position: relative;
+    border: 1px solid black;
     border-radius: 10px;
+    
   }
   
   .keys {
